Fixed spacing for login system

--- a/src1/styles.css
+++ b/src1/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f5ece2;
+  overflow: hidden;
 }
 
 header {
@@ -144,9 +145,10 @@ img {
 }
 
 h4 {
-  margin-top: 30px;
+  margin-top: 20px;
   text-align: center;
   color: #f2a000;
+  margin-bottom: 10px;
 }
 
 @keyframes cursor-blink {
@@ -165,7 +167,7 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 5px;
   color: black;
   font-size: 12px;
 }
